# daft-launcher

./: .daft.toml  .gitignore  Cargo.toml  MANIFEST.in  README.md  TODO.md  pyproject.toml  rustfmt.toml  setup.py  template.toml
.cargo/: config.toml
.github/workflows/: build-and-test.yaml  deploy-mdbook-2.yaml  deploy-mdbook.yaml  mdbook.yaml  publish-to-pypi.yaml  run-rust-tests.yaml
assets/: default.toml  sql.py  template-byoc.toml  template-provisioned.toml  template.toml  template_k8s.toml
assets/tests/: custom.toml  light.toml
daft/: __init__.py  __main__.py  ray_default_configs.py
daft/aws/: __init__.py
daft/config/: graviton.yaml
daft/ray_default_configs/: aws_default.yaml
daft_configs/: aws.toml
daft_launcher/: __init__.py  cli.py  commands.py  configs.py  data_definitions.py  helpers.py  merge.py
daft_launcher/assets/: aws.toml
daft_launcher/pre_configured_templates/: aws.py
daft_launcher/ray_default_configs/: aws.yaml
daft_launcher/templates/: aws.toml
docs/: GETTING_STARTED.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  commands.md  example.md  future_plans.md  introduction.md
docs/book/src/commands/: down.md  init_config.md  mod.md  submit.md  up.md
docs/byoc/: README.md  on-prem.md  ray-installation.md
docs/kubernetes/: README.md  cloud.md  local.md
docs/src/: SUMMARY.md  introduction.md
docs/src/commands/: connect.md  dashboard.md  down.md  init-config.md  list.md  mod.md  sql.md  submit.md  up.md
examples/: aws.toml  count.py  import_daft.py  main.py  mean.py
libs/processable-option/: Cargo.toml
libs/processable-option/src/: lib.rs  tests.rs
scripts/: build_default_tomls.py
src/: __init__.py  __main__.py  aws.rs  cli.rs  config.rs  configs.py  default.toml  handlers.rs  main.rs  processable_option.rs  ray_default_configs.py  sql.py  ssh.rs  template.toml  template_byoc.toml  template_k8s.toml  template_provisioned.toml  tests.rs  utils.rs  widgets.rs
src/aws/: _impl.rs  mod.rs
src/cli/: _assert.rs  _impl.rs  handlers.rs  mod.rs
src/config/: custom.rs  defaults.rs  mod.rs  processable_option.rs  processed.rs  raw.rs  ray.rs
src/ray/: _impl.rs  mod.rs
src/ray_default_configs/: aws.yaml
src/utils/: _impl.rs  mod.rs
tests/fixtures/: custom.toml  light.toml
working-dir/dir/: hello_daft.py
