[package]
name = "daft"
version = "0.4.1-alpha0"
edition = "2021"
description = "A simple launcher for spinning up and managing Ray clusters for Daft."
license = "LICENSE"

[dependencies]
aws-config = "1.5.8"
aws-sdk-sts = "1.46.0"
aws-sdk-ec2 = "1.81.0"
serde_yaml = "0.9.34"
tempdir = "0.3.7"
toml = "0.8.19"
which = "6.0.3"
map-macro = { version = "0.3.0", features = ["hashbrown"] }
anyhow = { version = "1.0.89", features = ["backtrace"] }
tokio = { version = "1.40.0", features = ["full"] }
hashbrown = { version = "0.15.0", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
dirs = "5.0.1"
log = "0.4.22"
env_logger = "0.11.5"
dialoguer = "0.11.0"
indicatif = "0.17.8"
console = "0.15.8"
futures = "0.3.31"
comfy-table = "7.1.1"

[dev-dependencies]
rstest = "0.23.0"
