[package]
name = "daft"
version = "0.4.1-alpha0"
edition = "2021"
description = "A simple launcher for spinning up and managing Ray clusters for Daft"
license = "LICENSE"

[dependencies]
aws-config = "1.5.8"
aws-sdk-sts = "1.46.0"
aws-sdk-ec2 = "1.81.0"
serde_yaml = "0.9.34"
tempdir = "0.3.7"
toml = "0.8.19"
anyhow = { version = "1.0.89", features = ["backtrace"] }
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
comfy-table = "7.1.1"
regex = "1.11.1"
open = "5.3.2"
versions = { version = "6.3.2", features = ["serde"] }

[dev-dependencies]
rstest = "0.24.0"
