[package]
name = "daft"
version = "0.4.1-alpha0"
edition = "2021"
description = "A simple launcher for spinning up and managing Ray clusters for Daft"
license = "LICENSE"

[dependencies]
aws-config = "1.5"
aws-sdk-sts = "1.46"
aws-sdk-ec2 = "1.81"
serde_yaml = "0.9"
tempdir = "0.3"
toml = "0.8"
comfy-table = "7.1"

[dependencies.anyhow]
version = "1.0"
features = ["backtrace"]

[dependencies.tokio]
version = "1.40"
features = ["full"]

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[dependencies.versions]
version = "6.3"
features = ["serde"]

[dev-dependencies]
rstest = "0.24"
