[project]
name = "daft-launcher"
dependencies = ["ray[default]", "boto3"]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"

[tool.pyright]
# typeCheckingMode = "off"
venv = ".venv"
venvPath = "."

[[tool.pyright.executionEnvironments]]
root = "examples"
