[project]
name = "daft-launcher"
dependencies = ["ray[default]", "maturin>=1.0,<2.0"]
requires-python = ">=3.9"
dynamic = ["version"]

[project.license]
file = "LICENSE"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"

[tool.pyright]
venv = ".venv"
venvPath = "."

[[tool.pyright.executionEnvironments]]
root = "examples"
